Kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-app
spec:
  selector:
    matchLabels:
      app: rss-app
  replicas: 1
  template:
    metadata:
      labels:
        app: rss-app
    spec:
      containers:
      - name: rss-app
        image: mtr.devops.telekom.de/mcsps/fresh-rss:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 33
          runAsGroup: 33
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/FreshRSS
          name: rss-app
        - mountPath: /var/run/apache2
          name: apache-run
        - mountPath: /var/lib/php/sessions
          name: php-sessions
        - mountPath: /tmp
          name: tmp
      restartPolicy: Always
      securityContext:
        fsGroup: 33
        supplementalGroups:
        - 33
      terminationGracePeriodSeconds: 30
      volumes:
        - name: rss-app
          persistentVolumeClaim:
            claimName: rss-app
        - name: apache-run
          emptyDir: {}
        - name: php-sessions
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
